fix join-tout being larger than screen width with max-width and overflow visible

--- a/src/scss/components/molecules/_join-tout.scss
+++ b/src/scss/components/molecules/_join-tout.scss
@@ -36,6 +36,8 @@
     top: 6rem;
     left: -0.75rem;
     width: 16rem;
+		max-width: 100%;
+		overflow: visible;
   }
 
   &::after {
